# BookSmart

./: .env.EXAMPLE  .gitignore  README.md  app.json  docker-compose.yml  package-lock.json  package.json  types.tsx
app/: _layout.tsx  index.tsx
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: main.py  models.py  utils.py
backend/app/alembic/: README  env.py
backend/app/alembic/versions/: 12a7d8de9e7b_message_4.py  3980e90369ab_message_4.py  3a7638d63c90_message_2.py  3ab8d6897006_init_tables.py  486d7ae76642_message_3.py  562654a5ad47_message7.py  64e9a2cdcd71_init_tables.py  6a370fde00b6_question_text_must_have_1_char.py  878b8e9201d7_init_tables.py  9051ae2b024d_message.py  93411d87f22f_message2.py  9f01dc317ed5_message2.py  a3dba355615d_message.py  aceb73c03b09_init_tables.py  ad31ba263f68_message.py  c30ddcaca803_message.py  ee089e021091_message6.py
backend/app/api/: deps.py  helpers.py  main.py
backend/app/api/routes/: admin.py  login.py  read.py  search.py  users.py
backend/app/core/: config.py  db.py  middleware.py  security.py
backend/app/crud/: book.py  user.py
backend/app/scripts/: seed.py
backend/app/services/: audible_service.py  google_books_service.py  openai.py  openai_service.py
backend/seeds/: bookchapters.json  books.json  chapterquestions.json  settings.json
backend/tests/: conftest.py  test_crud_book.py  test_crud_user.py  test_routes_admin.py  test_routes_login.py  test_routes_read.py  test_routes_search.py  test_routes_users.py
components/: book.tsx  bookRow.tsx  bookRowSearch.tsx  chapterBtn.tsx  header.tsx  header.web.tsx  navbar.web.tsx  progressBar.tsx  searchResultsList.tsx
frontend/: README.md  app.json  package-lock.json  package.json  types.tsx
ios/: Podfile
terraform/: .gitignore  .terraform.lock.hcl  app.tf  database.tf  frontend.tf  (+4 more)
(+57 files in other folders)
