[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2.3",
    "alembic>=1.13.3",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
]
