[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2.3",
    "alembic>=1.13.3",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "openai>=2.14.0",
    "httpx>=0.28.1",
    "pyjwt>=2.10.1",
    "bcrypt>=5.0.0",
    "sentry-sdk>=2.48.0",
]

[project.scripts]
seed = "app.scripts.seed:main"

[tool.setuptools.packages.find]
include = ["app*"]

[dependency-groups]
dev = ["pytest>=8.0", "anyio[trio]>=4.0", "pytest-env>=1.0"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pytest_env]
POSTGRES_SERVER = "localhost"
POSTGRES_USER = "testuser"
POSTGRES_PASSWORD = "testpassword"
POSTGRES_DB = "testdb"
PROJECT_NAME = "BookSmart Test"
SECRET_KEY = "test-secret-key-not-for-production-only"
OPENAI_API_KEY = "test-openai-key"
